# Trading-strategies-and-indicators

./: pyproject.toml
src/: 01_EMA_cross-strategy.ipynb  02_Trix-strategy.ipynb  03_RSI_VWAP-strategy.ipynb  05_Bollinger_Bands_on_Momentum-strategy.ipynb  05_Momentum_bollinger_bands-strategy.ipynb  07_Stochastic_and_Bollinger_Bands-strategy.ipynb  10_Orderbook_indicator-strategy.ipynb  11_Fibonacci_Moving_Average-strategy.ipynb  12_ZLEMA-strategy.ipynb
src/modules/: backtester.py  data_fetcher.py  indicators.py  risk.py  screener.py
